tests/extensions/enhanced_assignments/valid/starAccumulator.wacc
# Output:
# 30

begin
    int i = 5;
    i *= 6;
    println i
end