tests/extensions/enhanced_assignments/semanticErr/badIdentMul.wacc
begin
    i *= 9
end